--- a/_sass/_hack.scss
+++ b/_sass/_hack.scss
@@ -1,6 +1,7 @@
 *, *:before, *:after {
     padding: 0;
     margin: 0;
+	-webkit-font-smoothing: antialiased;
     -webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
